--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -94,12 +94,11 @@
 \title{
 \vspace{2in}
 \textmd{\textbf{\hmwkClass:\ \hmwkTitle}}\\
-% \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate}\\
 \vspace{3in}
 }
 
 \author{\textbf{\hmwkAuthorName}}
-\date{} % Insert date here if you want it to appear below your name
+\date{December 3rd, 2015} % Insert date here if you want it to appear below your name
 
 %----------------------------------------------------------------------------------------
 % Bibliography
