Fixed up caption

--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -153,7 +153,7 @@ Market Chirp is a stock recommendation web application developed in the context 
 \begin{figure}[htpb]
   \centering
   \includegraphics[width=0.75\columnwidth]{resources/git.jpg} % Example image
-  \caption{Example of our Git branching technique, from \cite{GitBranching}.}
+  \caption{Example of our Git branching technique (\cite{GitBranching})}
   \label{fig:git}
 \end{figure}
 \subsection{Planning}
