--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -184,7 +184,7 @@ We also performed pair programming in certain scenarios such as when developing 
 \end{mainSection}
 
 \begin{mainSection}{Testing}
-  \subsection{Configuration}
+  \subsection{Server configuration}
   We used the following software packages for all of our testing:
   \begin{itemize}
     \item Nginx
@@ -195,6 +195,72 @@ We also performed pair programming in certain scenarios such as when developing 
   We modified the provided JavaScript Object Notation (JSON) files to configure our server with the proper environmental variables, letting us keep our secret keys out of our public version control.\\
 
   The service was developed on our personal laptops, with all performance testing running on Amazon Web Services (AWS).  It was trivial for us to deploy new versions because we only had to deploy for performance testing, which was handled by our server provisioning scripts.\\
+
+\begin{figure}[htpb]
+  \begin{center}
+    \begin{tabular}{| l | r | r | r | }
+      \hline
+      \multicolumn{4}{ |c| }{M3 Server Configurations}\\
+      \hline
+      Server Size & Cores & RAM (GiB) & Process Parallelization\\
+      \hline
+      Med     & 1 &  3.75 & 1 \\
+      Large   & 2 &  7.50 & 2 \\
+      XLarge  & 4 & 15.00 & 4 \\
+      2XLarge & 8 & 30.00 & 8 \\
+      \hline
+    \end{tabular}
+    \caption{Table of server configurations.  These settings were used for all tests.  For a server with $n$ cores, $n$ worker processes were used.  Each worker process was single threaded.}
+    \label{tab:m3}
+  \end{center}
+\end{figure}
+
+Figure \ref{tab:m3} shows the configurations of the various server sizes used for all testing.  By minimizing differences in the testing setups, we were able to clearly show the effects of each optimization.\\
+
+When separate database servers were used (for example, in horizontal scaling), the database server was the same size as the application server (\texttt{db.m3med} was used for \texttt{m3.med}).
+
+% TODO Talk about how max user count limited our tests in time
+% TODO Show graph that illustrates the user arrival rate
+% TODO Talk about using small subset of stocks to ensure cache hits
+
+  \subsection{Critical Path}
+  Our critical path through our application was the path that we thought the average user was most likely to hit.  We had two user models, with a 50\% chance that either model was selected for each test user:
+  \begin{enumerate}
+    \item A user who is not logged in
+    \item A user who is logged in
+  \end{enumerate}
+
+  While visiting each page, the test user would wait a randomized amount of time up to a threshold to emulate a person either looking at the page or filling out forms.
+
+  \subsubsection{User not logged in}
+  A user who is not logged in has no account on Market Chirp and therefore has no favorites.  They are also unable to access the Dashboard feature, which is the page that requires the most data fetching and handling, making it the most expensive page to load.  Instead, this user:
+  \begin{enumerate}
+    \item Visits our homepage
+    \item Visits our sentiment analysis page
+    \item Searchs for FB
+    \item Searches for AAPL
+    \item Searches for GOOGL
+    \item Searches for TSLA
+    \item Visits our stock data page
+    \item Searchs for FB
+    \item Searches for AAPL
+    \item Searches for GOOGL
+    \item Searches for TSLA
+  \end{enumerate}
+
+  \subsubsection{User is logged in}
+  A logged in user would want to check their favorited stocks, which is most easily done through the Dashboard page.  From there, we thought the average user would check their stocks, look for a new one, favorite the new stock and drop one of their favorited stocks.  This user:
+  \begin{enumerate}
+    \item User logs in
+    \item Visits their dashboard
+    \item Visits the dashboard for GOOGL
+    \item Favorites GOOGL
+    \item Visits the dashboard for TLSA
+    \item Visits the dashboard for FB
+    \item Visits the dashboard for AAPL
+    \item Removes AAPL from their favorite list
+    \item User logs out
+  \end{enumerate}
 
   \subsection{Initial testing}
   The first tests of Market Chirp showed massive performance issues.  Twitter sentiment data was calculated for all 100 tweets (pulled from Twitter separately for each request), leading to $20+$ second delays in getting results when searching for a stock symbol.  From looking at the logs and \texttt{top}, it was clear that the process was CPU bound.  No formal Tsung testing happened at this performance level because individual page loadings took too long and the service was not ready for even a single user.\\
