--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -350,7 +350,7 @@ When separate database servers were used (for example, in horizontal scaling), t
       \label{graph:vertical}
     \end{figure}
 
-    Figure \ref{graph:vertical} shows the result of our vertical scaling. As expected, when double the procesing power was thrown at the problem, the number of users processed per second roughly doubled.
+    Figure \ref{graph:vertical} shows the result of our vertical scaling. As expected, when double the processing power was thrown at the problem, the number of users processed per second roughly doubled.
 
   \subsection{Horizontal scaling}
   \begin{figure}[H]
